<resources>
    <string name="SecurityPatch_summary">Android security patch level</string>
    <string name="a"> One</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_all">full screen mode</string>
    <string name="action_fall">suspension ball</string>
    <string name="action_leo">LeoTweaks</string>
    <string name="action_lock">one-click lock screen</string>
    <string name="action_outdoors">outdoor mode</string>
    <string name="action_pop">Screen Assistant</string>
    <string name="action_ram">One-click cleanup</string>
    <string name="action_reboot">restart menu</string>
    <string name="action_reminder">Press and hold the power button and the volume down button for 7 seconds to restart the phone.</string>
    <string name="airplane_tactics">Aircraft mode policy</string>
    <string name="airplane_tactics_summary">Enable flight mode does not automatically turn off WLAN</string>
    <string name="alert_error_action">Version restore</string>
    <string name="alert_error_action_pk">Restored to default version, restarting device takes effect</string>
    <string name="alert_error_action_restart">Reboot the device</string>
    <string name="alert_error_number">detected</string>
    <string name="animator_duration">animated image expansion time effect</string>
    <string name="battery_log">empty battery record</string>
    <string name="battery_log_summary">clear application power consumption record and battery curve data</string>
    <string name="boot_animation">boot animation</string>
    <string name="boot_animation_sumarry">custom boot animation</string>
    <string name="click_action">click action</string>
    <string name="dashed_color_title">set the background dotted color</string>
    <string name="dashed_gop_title">Set the dotted line interval</string>
    <string name="dashed_radius_title">set the background fillet radius</string>
    <string name="dashed_thickness_title">Set the thickness of the dotted line</string>
    <string name="dashed_title">Enable background dotted strokes</string>
    <string name="dashed_width_title">set the width of the dotted line</string>
    <string name="doze">clean battery optimization white list</string>
    <string name="doze_sumarry">Android M+ clean up the Doze mode whitelist program</string>
    <string name="gop_title">interval is  </string>
    <string name="height_title">height is  </string>
    <string name="keyguard_aweather_style">weather plugin type</string>
    <string name="keyguard_weather_enabled">Lock Screen Weather Plugin</string>
    <string name="keyguard_weather_height">plugin height</string>
    <string name="keyguard_weather_top">plug-in top margin</string>
    <string name="off">@string/abc_capital_off</string>
    <string name="on">@string/abc_capital_on</string>
    <string name="padding_title">margin is  </string>
    <string name="radius_title">angle is  </string>
    <string name="refresh_title">refresh rate  </string>
    <string name="seekbar_padding_sumarry">Slide left and right to adjust margins</string>
    <string name="seekbar_sumarry">left and right sliding adjustment</string>
    <string name="seekbar_text_sumarry">Slide left and right to adjust the text size</string>
    <string name="sim_dialog">Disable STK popup</string>
    <string name="sim_dialog_summary">Do not pop up the SIM card window when booting</string>
    <string name="sim_restriction">3 card restrictions</string>
    <string name="statusbar_logo_color">The status bar background is dark Logo color</string>
    <string name="statusbar_logo_color_enabled">Set the status bar background to dark logo color</string>
    <string name="statusbar_logo_dark_color_enabled">Set the status bar background to light color Logo color</string>
    <string name="statusbar_logo_end_padding">Logo right margin</string>
    <string name="statusbar_logo_orientation">status bar Logo display location</string>
    <string name="statusbar_logo_size">Logo icon size</string>
    <string name="statusbar_logo_start_padding">Logo left margin</string>
    <string name="statusbar_logo_style">Status bar LOGO icon selection</string>
    <string name="statusbar_traffic_autohide_enabled">Automatically hide when there is no network</string>
    <string name="statusbar_traffic_autohide_threshold">network speed automatic hiding threshold</string>
    <string name="statusbar_traffic_color">The status bar background is dark network speed color</string>
    <string name="statusbar_traffic_color_enabled">Set the status bar background to dark network speed color</string>
    <string name="statusbar_traffic_color_gategory">network speed color</string>
    <string name="statusbar_traffic_dark_color">The status bar background is light color speed color</string>
    <string name="statusbar_traffic_dark_color_enabled">Set the status bar background to light color speed</string>
    <string name="statusbar_traffic_end_padding">network speed right margin</string>
    <string name="statusbar_traffic_extends_color">Allows the text speed text color to be colored on the arrow</string>
    <string name="statusbar_traffic_font_style">speed font style</string>
    <string name="statusbar_traffic_icon">speed arrow</string>
    <string name="statusbar_traffic_icon_color">The status bar background is the dark speed arrow color</string>
    <string name="statusbar_traffic_icon_dark_color">The status bar background is light color speed arrow color</string>
    <string name="statusbar_traffic_icon_enabled">display speed arrow</string>
    <string name="statusbar_traffic_icon_orientation">arrow position switch</string>
    <string name="statusbar_traffic_icon_padding">speed icon and text margin</string>
    <string name="statusbar_traffic_icon_style">speed arrow style</string>
    <string name="statusbar_traffic_orientation">status bar speed display location</string>
    <string name="statusbar_traffic_padding">network speed margins</string>
    <string name="statusbar_traffic_show_state">network speed display status</string>
    <string name="statusbar_traffic_single_enabled">The speed of the network is forced to be displayed as a single line</string>
    <string name="statusbar_traffic_size">network speed size settings</string>
    <string name="statusbar_traffic_start_padding">network speed left margin</string>
    <string name="statusbar_traffic_state">network speed status</string>
    <string name="statusbar_traffic_text">speed text</string>
    <string name="statusbar_traffic_text_enabled">display speed upload and download text</string>
    <string name="statusbar_traffic_uint_style">network speed unit switch</string>
    <string name="storage_bgtitle">background setting</string>
    <string name="storage_title">store information</string>
    <string name="system_animation">system animation</string>
    <string name="task_info_available_color">Available information color</string>
    <string name="task_info_available_font">available information font</string>
    <string name="task_info_bg_color">set storage information background color</string>
    <string name="task_info_bg_enabled">custom storage information background color</string>
    <string name="task_info_click_enabled">click on the storage information cleanup process</string>
    <string name="task_info_enabled">recent task storage information</string>
    <string name="task_info_refresh">set refresh rate</string>
    <string name="task_info_size">store information text size</string>
    <string name="task_info_size_sumarry">text information font greater than 16dp will automatically hide the storage information title</string>
    <string name="task_info_style">storage information display type</string>
    <string name="task_info_symbol_color">separator color</string>
    <string name="task_info_symbol_style">separator symbol type</string>
    <string name="task_info_title_color">store information title color</string>
    <string name="task_info_title_enabled">store information title hidden</string>
    <string name="task_info_title_font">store information title font</string>
    <string name="task_info_total_color">store total information color</string>
    <string name="task_info_total_font">store total information font</string>
    <string name="task_info_used_color">used information color</string>
    <string name="task_info_used_font">used information font</string>
    <string name="tatusbar_logo_dark_color">The status bar background is a light logo color</string>
    <string name="text_color">text color</string>
    <string name="text_font">font settings</string>
    <string name="text_size">text size</string>
    <string name="text_size_title">size is  </string>
    <string name="thickness_title">thickness is  </string>
    <string name="transition_animation">over animation</string>
    <string name="vibrator">Enable vibration feedback</string>
    <string name="vibratorlevel">set the vibration feedback level</string>
    <string name="vibratorlevel_title"> level</string>
    <string name="wake_unplugged">USB plug and wake up screen</string>
    <string name="width_title">width is  </string>
    <string name="window_animation">window animation</string>
</resources>