<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:salt="http://schemas.android.com/apk/res-auto">
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/statusbar_traffic_state" />
    <com.leo.salt.preference.SaltSettingListPreference android:entries="@array/statusbar_traffic_options" android:title="@string/statusbar_traffic_show_state" android:key="statusbar_traffic_state" android:defaultValue="0" android:entryValues="@array/statusbar_traffic_values" />
    <com.leo.salt.preference.SaltSettingListPreference android:entries="@array/statusbar_view_options" android:title="@string/statusbar_traffic_orientation" android:key="statusbar_traffic_orientation" android:defaultValue="0" android:entryValues="@array/statusbar_view_values" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_autohide_enabled" android:key="statusbar_traffic_autohide_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="10" android:title="@string/statusbar_traffic_autohide_threshold" android:key="threshold" android:summary="@string/seekbar_sumarry" android:dependency="statusbar_traffic_autohide_enabled" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="" salt:unitsRight=" KB/s" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_uint_style" android:key="statusbar_traffic_uint_style" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" /> . <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/statusbar_traffic_icon" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_icon_enabled" android:key="statusbar_traffic_icon_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_icon_orientation" android:key="statusbar_traffic_icon_orientation" android:dependency="statusbar_traffic_icon_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingIconListPreference android:title="@string/statusbar_traffic_icon_style" android:key="statusbar_traffic_icon_style" android:dependency="statusbar_traffic_icon_enabled" android:defaultValue="0" salt:drawableIconColor="?colorAccent" />
    <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/statusbar_traffic_padding" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="5" android:title="@string/statusbar_traffic_start_padding" android:key="start_padding" android:summary="@string/seekbar_padding_sumarry" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="@string/padding_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="5" android:title="@string/statusbar_traffic_end_padding" android:key="end_padding" android:summary="@string/seekbar_padding_sumarry" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="@string/padding_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="5" android:title="@string/statusbar_traffic_icon_padding" android:key="icon_padding" android:summary="@string/seekbar_padding_sumarry" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="@string/padding_title" salt:unitsRight=" dp" /> . <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/statusbar_traffic_text" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_text_enabled" android:key="statusbar_traffic_text_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="11" android:title="@string/statusbar_traffic_size" android:key="traffic_size" android:summary="@string/seekbar_text_sumarry" android:defaultValue="9" android:min="5" salt:interval="1" salt:unitsLeft="@string/text_size_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingFontPreference android:entries="@array/font_style_entries" android:title="@string/statusbar_traffic_font_style" android:key="statusbar_traffic_font_style" android:defaultValue="0" android:entryValues="@array/font_style_values" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_single_enabled" android:key="statusbar_traffic_single_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingCardPreference />
    <com.leo.salt.preference.SaltSettingCategoryPreference android:title="@string/statusbar_traffic_color_gategory" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_color_enabled" android:key="statusbar_traffic_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_traffic_color" android:key="statusbar_traffic_color" android:dependency="statusbar_traffic_color_enabled" android:defaultValue="0xC3FFFFFF" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_traffic_icon_color" android:key="statusbar_traffic_icon_color" android:dependency="statusbar_traffic_color_enabled" android:defaultValue="0xC3FFFFFF" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" salt:reverseDependency="statusbar_traffic_extends_color" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_dark_color_enabled" android:key="statusbar_traffic_dark_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_traffic_dark_color" android:key="statusbar_traffic_dark_color" android:dependency="statusbar_traffic_dark_color_enabled" android:defaultValue="0x99000000" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_traffic_icon_dark_color" android:key="statusbar_traffic_icon_dark_color" android:dependency="statusbar_traffic_dark_color_enabled" android:defaultValue="0x99000000" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" salt:reverseDependency="statusbar_traffic_extends_color" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_traffic_extends_color" android:key="statusbar_traffic_extends_color" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
</PreferenceScreen>