<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:salt="http://schemas.android.com/apk/res-auto">
    <com.leo.salt.preference.SaltSettingIconListPreference android:title="@string/statusbar_logo_style" android:key="statusbar_logo_style" android:defaultValue="0" salt:drawableIconColor="?colorAccent" />
    <com.leo.salt.preference.SaltSettingListPreference android:entries="@array/statusbar_view_options" android:title="@string/statusbar_logo_orientation" android:key="statusbar_logo_orientation" android:defaultValue="0" android:entryValues="@array/statusbar_view_values" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="9" android:title="@string/statusbar_logo_size" android:key="logo_size" android:defaultValue="8" android:min="5" salt:interval="1" salt:unitsLeft="@string/text_size_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="5" android:title="@string/statusbar_logo_start_padding" android:key="start_padding" android:summary="@string/seekbar_padding_sumarry" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="@string/padding_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSeekBarPreference android:max="5" android:title="@string/statusbar_logo_end_padding" android:key="end_padding" android:summary="@string/seekbar_padding_sumarry" android:defaultValue="1" android:min="1" salt:interval="1" salt:unitsLeft="@string/padding_title" salt:unitsRight=" dp" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_logo_color_enabled" android:key="statusbar_logo_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/statusbar_logo_color" android:key="statusbar_logo_color" android:defaultValue="0xC3FFFFFF" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
    <com.leo.salt.preference.SaltSettingSwitchPreference android:title="@string/statusbar_logo_dark_color_enabled" android:key="statusbar_logo_dark_color_enabled" android:defaultValue="false" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.leo.salt.preference.SaltSettingColorPickerPreference android:title="@string/tatusbar_logo_dark_color" android:key="statusbar_logo_dark_color" android:defaultValue="0x99000000" salt:alphaSlider="true" salt:density="12" salt:lightnessSlider="true" />
</PreferenceScreen>